# piplayer

./: .env  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Justfile  Makefile  README.md  build.rs  convert_music.sh  crosscompile.sh  download_music.sh  piplayer.service
.github/workflows/: build.yml  rust.yml
src/: main.rs
