[package]
name = "piplayer"
version = "1.0.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2018"

[dependencies]
pretty_env_logger = "0.3"
actix-web = "1.0"
tar = "0.4"
rodio = { version = "0.9", features = ["vorbis"], default-features = false }
rand = "0.7"

[build-dependencies]
tar = "0.4"

[profile.release]
lto = true
