[package]
name = "piplayer"
version = "1.1.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2018"

[dependencies]
pretty_env_logger = "0.4"
actix-web = "3"
tokio = "1"
tar = "0.4"
rodio = { version = "0.13", features = ["vorbis"], default-features = false }
rand = "0.8"
lazy_static = "1"

[build-dependencies]
tar = "0.4"

[profile.release]
lto = true
